--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/* /general */
 .flex {
     display: flex;
 }
@@ -11,3 +12,54 @@
 .absCont {
     position: relative;
 }
+/* / utility */
+
+/************
+    HEADER
+ *********** */
+ header {
+     background-color: #DDDDDD;
+     padding: 0.5rem;
+     width: 100%;
+ }
+
+ /* TASTI OP FINESTRA */
+ .opFinestra {
+     flex-grow: 1;
+ }
+ .opFinestra .circle {
+     height: 1rem;
+     width: 1rem;
+     background-color: black;
+     border-radius: 50%;
+ }
+
+ .opFinestra .circle.red {
+     background-color: #FC615D;
+ }
+
+ .opFinestra .circle.orange {
+     background-color: #FDBC40;
+ }
+
+ .opFinestra .circle.green {
+    background-color: #34C84A;
+}
+
+.circle.red, .circle.green, .circle.orange {
+    margin-right: 0.5rem;
+}
+ /* / TASTI OP FINESTRA */
+
+ /* ZOOM ID */
+ .zoomId {
+     flex-grow: 1;
+ }
+ .zoomId .censId {
+     height: 1rem;
+     width: 7rem;
+     background-color: #A5A5A5;
+     border: 0.3rem solid white;
+     margin-left: 0.2rem;
+ }
+ /* / ZOOM ID */
